Fix HTML formatting in change log section

--- a/www/index.html
+++ b/www/index.html
@@ -653,10 +653,10 @@
 
   <p><strong>Change log:</strong></p>
     <ul>
-      <li><small>2026-01-12 - Added AWS EventBridge event to keep peakScout Lambda warm (<a href="https://github.com/vandydata/peakScout/issues/17">#17</a> 
+      <li><small>2026-01-12 - Added AWS EventBridge event to keep peakScout Lambda warm (<a href="https://github.com/vandydata/peakScout/issues/17">#17</a></small>
 </li>
     </ul>
-    
+    <br>
     <p>If you use peakScout for a publication, please cite it! Thank you.</p>
     <p>&copy; 2025 - <a href="https://cds.vanderbilt.edu">Creative Data Solutions</a>, Vanderbilt University</p>
     <p><a href="#" onclick="toggleTheme()" id="themeToggle">👾</a></p>
