Update links and citation

--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
       <img src="logo.svg" alt="PeakScout Logo" class="header-logo" />
       <p class="header-description">peakScout is a user-friendly and reversible peak-to-gene translator for genomic peak calling results</p>
       <div class="header-links">
-        <a href="#" class="header-link" title="Research article (coming soon)">
+        <a href="https://doi.org/10.1101/2025.09.07.671934" class="header-link" title="Research article (coming soon)">
           <span class="material-symbols-outlined">article</span>
           DOI
         </a>
@@ -653,11 +653,11 @@
 
   <p><strong>Change log:</strong></p>
     <ul>
-      <li><small>2026-01-12 - Added AWS EventBridge event to keep peakScout Lambda warm (<a href="https://github.com/vandydata/peakScout/issues/17">#17</a></small>
+      <li><small>2026-01-12 - Added AWS EventBridge event to keep peakScout Lambda warm (<a href="https://github.com/vandydata/peakScout/issues/17">#17</a>)</small>
 </li>
     </ul>
     <br>
-    <p>If you use peakScout for a publication, please cite it! Thank you.</p>
+    <p>If you use peakScout for a publication, please cite it via https://doi.org/10.1101/2025.09.07.671934 ! Thank you.</p>
     <p>&copy; 2025 - <a href="https://cds.vanderbilt.edu">Creative Data Solutions</a>, Vanderbilt University</p>
     <p><a href="#" onclick="toggleTheme()" id="themeToggle">👾</a></p>
   </footer>
