Update citation text to include DOI link

--- a/www/index.html
+++ b/www/index.html
@@ -657,7 +657,7 @@
 </li>
     </ul>
     <br>
-    <p>If you use peakScout for a publication, please cite it via https://doi.org/10.1101/2025.09.07.671934 ! Thank you.</p>
+    <p>If you use peakScout for a publication, please cite it via its <a href="https://doi.org/10.1101/2025.09.07.671934">DOI</a> ! Thank you.</p>
     <p>&copy; 2025 - <a href="https://cds.vanderbilt.edu">Creative Data Solutions</a>, Vanderbilt University</p>
     <p><a href="#" onclick="toggleTheme()" id="themeToggle">👾</a></p>
   </footer>
