--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,11 @@
           <span class="material-symbols-outlined">code</span>
           GitHub
         </a>
+        
+        <a href="https://github.com/vandydata/peakScout/issues" class="header-link" title="Need help? Something broke? Post an issue!">
+          <span class="material-symbols-outlined">help</span>
+          GitHub
+        </a>
       </div>
     </div>
 
