Change GitHub link text to 'Need help?'

--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,7 @@
         
         <a href="https://github.com/vandydata/peakScout/issues" class="header-link" title="Need help? Something broke? Post an issue!">
           <span class="material-symbols-outlined">help</span>
-          GitHub
+          Need help?
         </a>
       </div>
     </div>
